MAT-17092:  Adding ability to change locale for registered StringConvertors
StringConvertors factory can now be subclassed and used in configurations by property `StringConvertors.CONVERTORS_PROPERTY`.
Change of locale can now be propagated to convertors. See StringConvertors.changeLocale(Locale).